--- a/index.html
+++ b/index.html
@@ -199,39 +199,48 @@
                          <p class="p2_m6">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed dipsum dolor sit amet, consectetur adipisicing elit, sed dipsum dolor sit amet, consectetur adipisicing elit, sed d</p>
 
                          <div class="main_6_div">
-                               <div>
-                                     <img src="img/man1.png" alt="">
+                               <div class="murad_tigr">
+                                     <img src="img/man1.png" alt=""  class="man_m6">
                                      <p class="name">John Doe</p>
                                      <p class="dol">General Manager</p>
-                                     <div>
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
+
+                                     <div class="img_main_6">
+                                           <img src="img/pinterest.png" alt="">
+                                           <img src="img/SPEECH2.png" alt="">
+                                           <img src="img/tumblr.png" alt="">
+                                           <img src="img/twitter.png" alt="">
                                      </div>
                                </div>
-                               <div>
-                                     <img src="img/man1.png" alt="">
+                               <div class="murad_tigr">
+                                     <img src="img/man1.png" class="man_m6" alt="">
                                      <p class="name">John Doe</p>
                                      <p class="dol">General Manager</p>
-                                     <div>
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
+                                     <div class="img_main_6">
+
+                                            <img src="img/pinterest.png" alt="">
+                                           <img src="img/SPEECH2.png" alt="">
+                                           <img src="img/tumblr.png" alt="">
+                                           <img src="img/twitter.png" alt="">
                                      </div>
                                </div>
-                               <div>
-                                     <img src="img/man1.png" alt="">
+                               <div class="murad_tigr">
+                                     <img src="img/man1.png" alt=""  class="man_m6">
                                      <p class="name">John Doe</p>
                                      <p class="dol">General Manager</p>
-                                     <div>
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
-                                           <img src="" alt="">
+
+                                     <div class="img_main_6">
+                                            <img src="img/pinterest.png" alt="">
+                                           <img src="img/SPEECH2.png" alt="">
+                                           <img src="img/tumblr.png" alt="">
+                                           <img src="img/twitter.png" alt="">
                                      </div>
                                </div>
+                         </div>
+
+                         <div class="span_m6">
+                               <span class="blue"></span>
+                               <span></span>
+                               <span></span>
                          </div>
                   </div>
 
